--- a/2-labbymezzage/css/style.css
+++ b/2-labbymezzage/css/style.css
@@ -26,7 +26,7 @@ body {
     display: inline-block;
     width: 800px;
     background-color: #b6b6b6;
-    min-height: 800px;
+    min-height: 800px;    
 }
 footer {
     bottom: 0;
@@ -84,4 +84,7 @@ button {
 }
 .datetime{
     float:right;
+}
+#counter{
+    margin-left:10px;
 }
