--- a/5-PWD/css/style.css
+++ b/5-PWD/css/style.css
@@ -7,11 +7,66 @@ html {
     -o-background-size: cover;
     background-size: cover;
 }
+
+/*Styling the menu*/
 #menu {
-    position:fixed;
-    bottom:5px;
-    right:0px;
+    position: fixed;
+    bottom: 5px;
+    right: 0px;
     border-top: 10px solid;
     color: #000;
-    width:100%;
+    width: 100%;
+}
+#imageImg {
+        -ms-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -webkit-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    transform: scale(0.8);
+}
+#memoryImg {
+        -ms-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -webkit-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    transform: scale(0.8);
+}
+#rssImg {
+        -ms-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -webkit-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    transform: scale(0.8);
+}
+#imageImg:hover {
+    position:relative;
+    z-index:2;
+    -ms-transform: scale(1);
+    -moz-transform: scale(1);
+    -webkit-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition-duration:1.1s;
+}
+
+#memoryImg:hover {
+    position:relative;
+    z-index:2;
+    -ms-transform: scale(1);
+    -moz-transform: scale(1);
+    -webkit-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition-duration:1.1s;
+}
+
+#rssImg:hover {
+    position:relative;
+    z-index:2;
+    -ms-transform: scale(1);
+    -moz-transform: scale(1);
+    -webkit-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition-duration:1.1s;
 }
