--- a/5-PWD/css/style.css
+++ b/5-PWD/css/style.css
@@ -16,6 +16,7 @@ html {
     border-top: 10px solid;
     color: #000;
     width: 100%;
+    background-color:#000;
 }
 #imageImg {
         -ms-transform: scale(0.8);
