--- a/3-gameon/memory/css/style.css
+++ b/3-gameon/memory/css/style.css
@@ -1,34 +1,112 @@
-/*
-background color body #44f931
-gameboard color #ed19d2
-*/
 
-body{
-    background-color:#44f931;
+body {
+
+    background-image: url(../pics/background.png)
+
 }
 
-.container{
-}
-#gameboard{
-}
-table {
-    border:solid 1px;
-    margin: 20px 70px 40px 93px;
-    border-radius:5px;
-    -ms-border-radius:5px;
-    -moz-border-radius:5px;
-    -webkit-border-radius:5px;
-    -o-border-radius:5px;
+h1 {
+
+    text-align: center;
+
+    background-color: #fff;
+
+    border-radius: 5px;
+
+    -ms-border-radius: 5px;
+
+    -moz-border-radius: 5px;
+
+    -webkit-border-radius: 5px;
+
+    -o-border-radius: 5px;
+
+    -webkit-box-shadow: 10px 10px 5px #000000;
+
+    -moz-box-shadow: 10px 10px 5px #000000;
+
+    box-shadow: 10px 10px 5px #000000;
+
 }
 
-tr, td {    
+#container {
+
+    width: 800px;
+
+    margin: auto;
+
+}
+
+#gameboard {
+
     padding: 20px;
+
 }
 
-img:hover, a:hover, a:focus {
-    -ms-transform:scale(1.5); 
-    -moz-transform:scale(1.5);
-    -webkit-transform:scale(1.5); 
-    -o-transform:scale(1.5); 
-    transform:scale(1.5);
+table {
+
+    background-color: #fff;
+
+    border: solid 1px;
+
+    margin: auto;
+
+    border-radius: 5px;
+
+    -ms-border-radius: 5px;
+
+    -moz-border-radius: 5px;
+
+    -webkit-border-radius: 5px;
+
+    -o-border-radius: 5px;
+
+    -webkit-box-shadow: 10px 10px 5px #000000;
+
+    -moz-box-shadow: 10px 10px 5px #000000;
+
+    box-shadow: 10px 10px 5px #000000;
+
+}
+
+tr,
+
+td {
+
+    padding: 20px;
+
+}
+
+img {
+
+    -ms-transform: scale(2);
+
+    -moz-transform: scale(2);
+
+    -webkit-transform: scale(2);
+
+    -o-transform: scale(2);
+
+    transform: scale(2);
+
+}
+
+img:hover,
+
+a:hover,
+
+a:focus {
+
+    -ms-transform: scale(2.6);
+
+    -moz-transform: scale(2.6);
+
+    -webkit-transform: scale(2.6);
+
+    -o-transform: scale(2.6);
+
+    transform: scale(2.6);
+
+    -webkit-transition-duration: 1.1s;
+
 }
