--- a/5-PWD/css/style.css
+++ b/5-PWD/css/style.css
@@ -1,11 +1,84 @@
 /*  Styling the application */
 
 html {
-    background-image: url(../pics/background1.png);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+}
+body {
+    background-image: url(../pics/background1.png);
+    
+}
+#appWindowId {
+    margin:50px;
+    height: 600px;
+    width: 400px;
+    background-color: #fff;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border-color: #000;    
+    box-shadow: 5px 5px 5px 2px #000;
+}
+#imageViewerHeaderId {
+    height: 35px;
+    text-align: center;
+    font-size: 20px;
+    background-color: #757575;
+    width: 400px;
+    display: block;
+        -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+#contentDivId {
+    height: 540px;
+    width: 400px;
+    overflow: auto;    
+    background-color: #fff;
+        -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;    
+}
+#imageViewerStatusId {
+    height: 30px;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border-color: #000;
+    border: 2px;
+    box-shadow: 5px 5px 5px 2px #000;
+    background-color: #757575;
+}
+#closeButtonId {
+    float: right;
+    display: block;
+    margin-top: -40px;
+}
+#appIconId {
+    float: left;
+    display: block;
+    margin: 5px;
+}
+#ajaxLoaderId {
+    margin: 2px;
+}
+.galleryImg {
+    background-color: #000;
+    padding: 5px;
+    margin:15px;
+    text-align: center;
+    float: left;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;   
 }
 /*Styling the menu*/
 
